<resources>
    <string name="app_name">Career Guidence</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="language_prompt">Choose a Language</string>
    <string-array name="language">
        <item>English</item>
        <item>Hindi</item>
        <item>Marathi</item>
        <item>Tamil</item>
        <item>Gujarati</item>
        <item>Telugu</item>
        <item>Urdu</item>
    </string-array>
    <string name="sc1">When a student studies subjects like Physics and Chemistry in Science, it augments their understanding of the world, effects, causes, etc. It lets them develop scientific knowledge and theory about everything in their surroundings they may stumble across.</string>
    <string name="sc2">Science causes progressive and extraordinary developments. It has aided people in finding the cure to numerous diseases, increase awareness, and has created endless possibilities for us.</string>
    <string name="sc3">Scope after Science :</string>
    <string name="sc4">Engineering, Medical, B.sc Other</string>
    <string name="sc5">Top colleges in india and Abroad :</string>
    <string name="sc6">\n<b>India</b> : \nIIT-Bombay \nIIT-Delhi\n NITS\n IISc\n BITS-Pilani \n</string>
    <string name="sc7">\n<b>Abroad</b> : \nOxford university \nImperial college of engineering \nHarvard University \nCambridge University</string>
    <string name="top1"><b>Machine Learning : </b></string>
    <string name="des1">
    <ol>
        <li> Reason : Machine learning is one of the most popular future trend.To Reducing human error,Banking sectors to manipulate large amount of data accurately,Autonomous Vehicles are increase day to day\n</li>
        <li>\n Trend : Upcoming 5 years\n</li>
        <li>\n Expected salary : Around 4-8 lakhs/year\n</li>
        <li>\n Requirements: M.Tech.(Computer Eng.) , M.C.A. , M.Sc.(Computer Sci.)\n</li>
    </ol>
    </string>
    <string name="top2"><b>Robotics :</b></string>
    <string name="des2">
<ol><li>
Reason : It is used in most of the industries and power plants.\n</li><li>\n
Trend : All Time\n</li><li>\n
Expected salary :  Around 4-5 lakhs/year\n</li><li>\n
Requirements:M.Tech.(Mechanical Eng.),M.Tech.(Electrical Eng.)\n</li></ol></string>
    <string name="top3"><b>Internet Of things :</b></string>
    <string name="des3">
<ol><li>
Reason : It is used in precision agriculture , building management , transportation etc.\n</li><li>\n
Trend : This days\n</li><li>\n
Expected salary : Around 3-5 lakhs/year\n</li><li>\n
Requirements:M.Tech.(Computer Eng.) , M.C.A. , M.Sc.(Computer Sci.)\n</li></ol></string>
    <string name="top4"><b>Augmented Reality/Virtual Reality :</b></string>
    <string name="des4">
<ol><li>
Reason : Virtual Reality expresses all the objects virtually.\n</li><li>\n
Trend : In upcoming 3-5 years \n</li><li>\n
Expected salary : Around 4-6 lakhs/year\n</li><li>\n
Requirements:M.Tech.(Computer Eng.) , M.C.A. , M.Sc.(Computer Sci.)\n</li></ol></string>
    <string name="top5"><b>Cyber security :</b></string>
    <string name="des5">
<ol><li>
Reason : Most of the data is stored on servers so it is important to secure data.\n</li><li>\n
Trend : This days\n</li><li>\n
Expected salary : Around 5-8 lakhs/year\n</li><li>\n
Requirements:M.Tech.(Computer Eng.) , M.C.A. , M.Sc.(Computer Sci.)\n</li></ol></string>
    <string name="top6"><b>Nano Technology :</b></string>
    <string name="des6">
<ol><li>
Reason : To deal with nucleus and other small particles of nanoscale. \n</li><li>\n
Trend : In upcoming 6-8 years\n</li><li>\n
Expected salary : Around 3-5 lakhs/year\n</li><li>\n
Requirements:M.Tech.(Mechanical Eng.) , M.Sc.(Physics)\n</li></ol></string>
    <string name="top7"><b>Bio-Mechanics :</b></string>
    <string name="des7">
<ol><li>
Reason: It deals with the mechanics of the human or animal body and concerned with muscles and the skeleton.\n</li><li>\n
Trend:All time\n</li><li>\n
Expected salary: Around 3-5 lakhs/year\n</li><li>\n
Requirements:M.Tech.(Mechanical Eng.) , M.Sc.(Physics)\n</li></ol></string>
    <string name="top8"><b>Recreational cyborgs :</b></string>
    <string name="des8">
<ol><li>
Reason : To provide support to the handikape persons by providing artificial parts of body.\n</li><li>\n
Trend : All time\n</li><li>\n
Expected salary : Around 5-8 lakhs/year\n</li><li>\n
Requirements:Orthopedic , M.Tech.(Computer Eng.)\n</li></ol></string>
    <string name="top9"><b>Medical 3D printing :</b></string>
    <string name="des9">
<ol><li>
Reason : 3D printers will be used to make artificial parts.\n</li><li>\n
Trend : All time\n</li><li>\n
Expected salary : Around 5-8 lakhs/year\n</li><li>\n
Requirements:Orthopedic , M.Tech.(Computer Eng.)\n</li></ol></string>
    <string name="top10"><b>MBBS :</b></string>
    <string name="des10"><ol><li>
Reason: To guide the person for better health.
Trend: All time
Expected salary: around 4-8 lakhs/year
Requirement: M.B.B.S.\n</li></ol></string>
    <string name="yoga_data">What is Yoga?</string>
    <string name="yoga_data0">
    <ol>
        <li>Yoga is a group of physical, mental, and spiritual practices or disciplines which
            originated in ancient India. There is a broad variety of yoga schools, practices, and
            goals in Hinduism, Buddhism, and Jainism.\n
        </li>
    </ol>
    </string>
    <string name="yoga_data1"><ol><li>
<b>Why to choose Yoga as a career?\n</b></li>
<li>
You can perform and demonstrate all yoga exercises to participants and ensure compliance to safety and health standard. Assist participants to perform all exercises effectively. Evaluate exercises perform by participants and recommend correction whenever required.And you get good amount for this.\n</li></ol></string>
    <string name="yoga_data2"><ol>
<b>Scope:</b>
<li>
Research Officer- Yoga and Naturopathy\n</li>
<li>-Yoga Aerobic Instructor\n</li>
<li>-Assistant Ayurvedic Doctor\n</li>
<li>-Clinical Psychologist\n</li></ol></string>
    <string name="yoga_data3"><ol>
<li>
Institutes/ Colleges offering Yoga Sciences\n</li>
<li>-Government Naturopathic Medical College, Hyderabad\n</li>
<li>-SDM College of Naturopathy and Yogic Sciences, Ujire, Karanataka\n</li>
<li>-JSS Institute of Naturopathy and Yogic Sciences, Mysore Road, Ootacamund\n</li>
<li>-Shivaraj Naturapathy and Yoga Medical College, Salem\n</li>
<li>-Government Naturopathy and Yoga Medical College and Hospital, Anna Nagar, Chennai</li></ol>
</string>
    <string name="stp1">Who is An entrepreneur?\n=>An entrepreneur is an initiator, a challenger and a driver. Someone that creates something new, either an initiative, a business or a company.</string>
    <string name="stp2">Why we choose Startup as a career?</string>
    <string name="stp3">-->Lots of opportunities\n-->You can give jobs to others\n-->You can solve world's problem by your startup</string>
    <string name="stp4">Scope :</string>
    <string name="stp5">1.Green and renewable energy\n2.Artificial intelligence\n3.Video gaming\n4.Software as a service</string>
    <string name="stp6">Successful Startups :</string>
    <string name="stp7">\nOLA auto: Ola Cabs was founded on 3 December 2010 by Bhavish Aggarwal, currently CEO, and Ankit Bhati. As of 2017, the company has expanded to a network of more than 600,000 vehicles across 110 cities.</string>
    <string name="stp8">Revenue : ₹942.8 crore (US$140 million) in 2014-15</string>
    <string name="stp9">\nPaytm :Paytm is an Indian e-payments and e-commerce brand based out of Delhi NCR, India founded by Vijay Shekhar Sharma, Launched in August 2010. it is a consumer brand of parent company One97 Communications. The name is an acronym for "Payment Through Mobile".</string>
    <string name="stp11">"They make Revenue : ₹2,500 crore but still OYO have no any hotels of it's own."</string>
    <string name="archi_activity"><b>Architect:</b></string>
    <string name="archi_data1"><ol><li>
        Company Name:K architecture and urban design practice\n</li><li>\n
        Qualification:B.Arch\n</li><li>\n
        Role:Architect\n</li><li>\n
        Experience: 2-4 years\n</li><li>\n
        Salary: INR 15000 - 25000/ Month\n</li><li>\n
        Location:Pune\n</li><li>\n
        No. of vacancy:1\n</li></ol></string>
    <string name="archi_data2">
        <ol><li>Company Name:P S Landscape Design and Ecology\n</li><li>\n
        Qualification:B.Arch\n</li><li>\n
        Role:Architecture , Interior Design\n</li><li>\n
        Experience:1-5 years\n</li><li>\n
        Salary:INR 2,50,000 - 4,25,000  P.A.\n</li><li>\n
        Location:Navi Mumbai\n</li><li>\n
        No. of vacancy:3\n</li></ol></string>
    <string name="auto_activity"><b>Automobile :</b></string>
    <string name="auto_data1"><ol><li>
        Company Name:Danniel Techno Mark\n</li><li>\n
        Qualification:B.E/B.tech in Mechanical/Automobile\n</li><li>\n
        Role:Maintenace Engineer\n</li><li>\n
        Experience: fresher or expert\n</li><li>\n
        Salary:INR 2,00,000 - 4,50,000 P.A.\n</li><li>\n
        Location:Pune\n</li><li>\n
        No. of vacancy:3\n</li></ol></string>
    <string name="auto_data2"><ol><li>
        Company Name:AKB infotech\n</li><li>\n
        Qualification:B.E/B.tech in Mechanical/Automobile\n</li><li>\n
        Role:Production Engineer\n</li><li>\n
        Experience: 0-4 years\n</li><li>\n
        Salary:INR 2,00,000 - 3,50,000 P.A.\n</li><li>\n
        Location:Kolkata\n</li><li>\n
        No. of vacancy:10\n</li></ol></string>
    <string name="artdef">It is a very traditional stream.This stream is made up of parts like humanities, visual arts, performing arts, literary arts etc. A career in art is not limited to being a painter of canvases which get framed and sold in a gallery. Behind every piece of art in a newspaper, magazine, book, poster, and leaflet there’s a graphic or commercial artist or illustrator.</string>
    <string name="artdata"><b>\nFields:</b> \nPolitical Science Sociology\n English Sanskrit History\n</string>
    <string name="artclg">Top colleges in India/Abroad
\n<b>India</b> :\n Sir JJ School of Arts, Mumbai. \nVisva-Bharati, Kala Shanti Bhavan.\n
University of Delhi.Banaras Hindu University.\n\n
<b>Abroad </b>: \nRoyal college of Arts,London.\nParsons school of design,New york.\n
University of sydney

</string>
    <string name="Computer_Eng"><ol>
        <li><b>Why To Choose Computer  Engineering as Career?\n</b></li></ol></string>
        <string name="Comp_def"><ol><li>The digital age needs computer scientists.Computer science students have excellent graduate prospects.Computer scientists earn big bucks.Computer scientists are needed in every type of industry.\n</li></ol></string>
        <string name="Computer_Eng_fields"><ol>
            <li><b>Fields\n</b></li>
            <li>Algorithms and Data Structures\n</li>
            <li>Database systems\n</li>
            <li>Data Communication\n</li>
            <li>Artificial Intelligence\n</li>
            <li>AComputer Vision\n</li>
            <li>Machine Learning\n</li>
            <li>Soft Computing\n</li>
            <li>Bio Informatics\n</li>
            <li>Distributed computing\n</li>
            <li>Parallel Computing\n</li>
            <li>Cryptography\n</li>
            <li>Computer Graphics\n</li>
            <li>Robotics\n</li>
            <li>Web Technologies\n</li>
        </ol></string>
        <string name="Computer_Eng_colleges"><ol>
            <li><b>Top Colleges For Computer Eng:\n</b></li>
            <li>IISC,Banglore\n</li>
            <li>IIIT,Hyderabad\n</li>
            <li>IIT,Bombay\n</li>
            <li>IIT,Madras\n</li>
            <li>IIT,Delhi\n</li>
            <li>IIT,Kanpur\n</li>
            <li>BITS,Pilani\n</li>
            <li>IIT,Guwahati\n</li>
            <li>NIT,Trichy\n</li>
        </ol></string>
</resources>