<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.example.surejahit.career_guidance_app.StartupActivity"
android:background="#FFFFFF">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Startup"
        android:textSize="32dp"
        android:id="@+id/sc1"
        android:background="#2196F3"
        android:textColor="#FFFFFF"
        android:gravity="center_horizontal"
        android:textStyle="bold|italic"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stp1"
        android:textSize="20dp"
        android:textColor="#2196F3"
        />

    <WebView
        android:id="@+id/webVideoView1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="5dp"
        android:scrollbars="none">
    </WebView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stp2"
        android:id="@+id/sc3"
        android:textSize="20dp"
        android:textColor="#2196F3"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stp3"
        android:id="@+id/sc12"
        android:textSize="15dp"
        android:textColor="#2196F3"
        />

    <ImageView
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_below="@+id/sc2"
        android:src="@drawable/startup1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stp4"
        android:textSize="20dp"
        android:textColor="#2196F3"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stp5"
        android:textSize="15dp"
        android:textColor="#2196F3"
        />
    <WebView
        android:id="@+id/webVideoView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="5dp"
        android:scrollbars="none">
    </WebView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stp6"
        android:textSize="20dp"
        android:textColor="#2196F3"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stp7"
        android:textSize="20dp"
        android:textColor="#2196F3"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stp8"
        android:textSize="20dp"
        android:textColor="#2196F3"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stp9"
        android:textSize="20dp"
        android:textColor="#2196F3"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stp11"
        android:textSize="20dp"
        android:textColor="#2196F3"
        />
    <ImageView
        android:id="@+id/stp2"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_below="@+id/sc2"
        android:src="@drawable/startup2" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stp11"
        android:textSize="20dp"
        android:textColor="#2196F3"
        />
</LinearLayout>

</ScrollView>