<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.example.surejahit.career_guidance_app.YogaActivity"
android:background="#FFFFFF">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Yoga"
        android:textSize="32dp"
        android:id="@+id/sc1"
        android:background="#2196F3"
        android:textColor="#FFFFFF"
        android:gravity="center_horizontal"
        android:textStyle="bold|italic"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yoga_data"
        android:textSize="25dp"
        android:textColor="#2196F3"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yoga_data0"
        android:textSize="20dp"
        android:textColor="#2196F3"
        />
    <WebView
        android:id="@+id/webVideoView1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="5dp"
        android:scrollbars="none">
    </WebView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yoga_data1"
        android:id="@+id/sc3"
        android:textSize="20dp"
        android:textColor="#2196F3"
        />
    <ImageView
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:scaleType="fitXY "
        android:src="@drawable/yoga1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yoga_data2"
        android:id="@+id/sc12"
        android:textSize="15dp"
        android:textColor="#2196F3"
        />
    <WebView
        android:id="@+id/webVideoView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="5dp"
        android:scrollbars="none">
    </WebView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yoga_data3"
        android:textSize="15dp"
        android:textColor="#2196F3"
        />
    <ImageView
        android:id="@+id/stp2"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:src="@drawable/yoga2" />
</LinearLayout>

</ScrollView>