<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.surejahit.career_guidance_app.arts11_12th">
    <RelativeLayout
        android:background="#2196F3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Why to Choose Arts??"
            android:textSize="32dp"
            android:id="@+id/arthead"
            android:background="#2196F3"
            android:textColor="#fff"
            android:gravity="center_horizontal"
            android:textStyle="bold|italic"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artdef"
            android:id="@+id/artdef"
            android:layout_below="@+id/webVideoViewart"
            android:background="#fff"
            android:textColor="#2196F3"
            />

        <WebView
            android:id="@+id/webVideoViewart"
            android:layout_below="@+id/arthead"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="5dp"
            android:scrollbars="none">
        </WebView>

        <WebView
            android:id="@+id/webVideoViewart2"
            android:layout_below="@+id/artdef"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="5dp"
            android:scrollbars="none">
        </WebView>
        <TextView
            android:id="@+id/textartfield"
            android:layout_below="@id/webVideoViewart2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artdata"
            android:textColor="#2196F3"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textartfield"
            android:textColor="#2196F3"
            android:text="@string/artclg"/>

    </RelativeLayout>


</android.support.v4.widget.NestedScrollView>
